# llmlab

./: .gitignore  README.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  App.test.jsx
frontend/src/components/: CompareView.jsx  Dropdown.jsx  Dropdown.test.jsx  FileZone.jsx  FileZone.test.jsx  HistoryPanel.jsx  ModelPicker.jsx  ModelPicker.test.jsx  ModelSelectorChips.jsx  OptControl.jsx  OptControl.test.jsx
frontend/src/data/: providers.js  tasks.js  tasks.test.js
frontend/src/utils/: evalMetrics.js  evalMetrics.test.js  fileHelpers.js  fileHelpers.test.js  history.js  history.test.js  renderMd.js  renderMd.test.js
llmlab/: __init__.py  __main__.py  cli.py  evaluation.py  providers.py  server.py
tests/: conftest.py  test_cli.py  test_evaluation.py  test_providers.py  test_server.py
